Dark theme (no button switch)

--- a/css.css
+++ b/css.css
@@ -211,6 +211,13 @@ header{
 .nav_page>span:first-of-type{
 	color: var(--blue);
 }
+#theme_switch{
+	background: none;
+	border: none;
+}
+#theme_switch svg:last-child{
+	display: none;
+}
 .step{
 	padding: 0 12px;
 }
@@ -992,4 +999,70 @@ form input[type=submit] {
 	src: url('fonts/Poppins-ThinItalic.ttf') format('truetype');
 	font-weight: 100;
 	font-style: italic;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--white: #dcdcdc;
+		--black: #f5f5f5;
+		--blue: #3b3b91;
+
+		/* Lighter shades */
+		--blue-lightest: #3f3f75;
+		--blue-lighter: #252553;
+
+		/* Darker shades */
+		--blue-darker: #1b1b4d;
+		--blue-darkest: #0d0d2a;
+		--accent: #ffb900;
+		--accent-muted: #cc9600; /* Softer, muted accent for background */
+		--blue-deep: #050517; /* Ultra-dark blue for background elements */
+
+		--bs-gutter-x: 1.5rem;
+	}
+	body {
+		color: var(--white);
+		background: linear-gradient(to right, var(--blue-darker) -15%, var(--blue-darkest) 12%, var(--blue-deep) 60%);
+	}
+	a {
+		color: var(--accent);
+	}
+	h1, h2, h3, h4, h5, h6 {
+		color: var(--white);
+	}
+	h1>span{
+		background-image: linear-gradient(var(--accent-muted), var(--accent-muted));
+	}
+
+	#theme_switch svg:first-child{
+		display: none;
+	}
+	#theme_switch svg:last-child{
+		display: block;
+	}
+
+	.nav_page svg{
+		fill: var(--white) !important;
+	}
+	nav a, .nav_name a, .nav_social a{
+		color: var(--white);
+	}
+	a:hover {
+		color: var(--accent);
+	}
+	.active {
+		color: var(--accent);
+	}
+	nav a.active{
+		color: var(--blue-light) !important;
+	}
+	.services_cv{
+		background-color: var(--blue-lighter);
+	}
+	.skill_fill_progress{
+		background-color: var(--blue-light);
+	}
+	form input, form textarea{
+		color: var(--white) !important;
+	}
 }
