Працююча темна тема

--- a/css.css
+++ b/css.css
@@ -112,6 +112,8 @@ img{
 	--blue-deep: #0a0a33;
 
 	--bs-gutter-x: 1.5rem;
+
+	transition: background-color 10s ease-out, color 10s ease-out, display 3.8s ease-out, fill 3.8s ease-out !important;
 }
 
 body {
@@ -207,6 +209,9 @@ header{
 	line-height: 22px;
 	font-weight: 700;
 	margin-bottom: 80px;
+
+	display: flex;
+	align-items: center;
 }
 .nav_page>span:first-of-type{
 	color: var(--blue);
@@ -214,6 +219,7 @@ header{
 #theme_switch{
 	background: none;
 	border: none;
+	margin-left: auto;
 }
 #theme_switch svg:last-child{
 	display: none;
@@ -1001,22 +1007,24 @@ form input[type=submit] {
 	font-style: italic;
 }
 
-@media (prefers-color-scheme: dark) {
+/* ===================================
+	🌃. Dark Theme (added through js)
+====================================== */
+/*@media (prefers-color-scheme: dark) {
 	:root {
 		--white: #dcdcdc;
 		--black: #f5f5f5;
 		--blue: #3b3b91;
 
-		/* Lighter shades */
 		--blue-lightest: #3f3f75;
 		--blue-lighter: #252553;
 
-		/* Darker shades */
+
 		--blue-darker: #1b1b4d;
 		--blue-darkest: #0d0d2a;
 		--accent: #ffb900;
-		--accent-muted: #cc9600; /* Softer, muted accent for background */
-		--blue-deep: #050517; /* Ultra-dark blue for background elements */
+		--accent-muted: #cc9600;
+		--blue-deep: #050517;
 
 		--bs-gutter-x: 1.5rem;
 	}
@@ -1044,6 +1052,9 @@ form input[type=submit] {
 	.nav_page svg{
 		fill: var(--white) !important;
 	}
+	.nav_page>span:first-of-type{
+		color: var(--blue-light);
+	}
 	nav a, .nav_name a, .nav_social a{
 		color: var(--white);
 	}
@@ -1065,4 +1076,4 @@ form input[type=submit] {
 	form input, form textarea{
 		color: var(--white) !important;
 	}
-}
+}*/
