Посилання на портфоліо
Посилання на гітхаб сторінку цього портфоліо замість опції завантаження потенційних файлів

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -77,11 +77,11 @@
 					</div>
 					<ul class="services_cv section_content_slide-right parallax left">
 						<li><a href="{{main.cv.url}}" download>Download CV</a></li>
-						<li><a href="{{main.portfolio.url}}" download>My Portfolio</a></li>
+						<li><a href="{{main.portfolio_link}}" target="_blank">My Portfolio</a></li>
 					</ul>
 					<ul class="services_cv services_cv_mobile">
 						<li><a href="{{main.cv.url}}" download>Download CV</a></li>
-						<li><a href="{{main.portfolio.url}}" download>My Portfolio</a></li>
+						<li><a href="{{main.portfolio_link}}" target="_blank">My Portfolio</a></li>
 					</ul>
 
 					<div class="services_grid">
