--- a/css.css
+++ b/css.css
@@ -753,6 +753,9 @@ form input[type=submit] {
 		height: 100%;
 		transition: .25s ease-in;
 	}
+	#theme_switch{
+		margin-left: 80px;
+	}
 
 	main{
 		max-width: 90vw;
@@ -1012,7 +1015,7 @@ form input[type=submit] {
 ====================================== */
 /*@media (prefers-color-scheme: dark) {
 	:root {
-		--white: #dcdcdc;
+		--white: #f9f9f9;
 		--black: #f5f5f5;
 		--blue: #3b3b91;
 
@@ -1023,7 +1026,7 @@ form input[type=submit] {
 		--blue-darker: #1b1b4d;
 		--blue-darkest: #0d0d2a;
 		--accent: #ffb900;
-		--accent-muted: #cc9600;
+		--accent-muted: #e6ac00;
 		--blue-deep: #050517;
 
 		--bs-gutter-x: 1.5rem;
@@ -1040,6 +1043,20 @@ form input[type=submit] {
 	}
 	h1>span{
 		background-image: linear-gradient(var(--accent-muted), var(--accent-muted));
+	}
+
+	@media (max-width: 1199px){
+		header{
+			background: linear-gradient(
+				to right,
+				var(--blue-darker) -15%,
+				var(--blue-darkest) 12%,
+				var(--blue-deep) 60%
+			);
+		}
+	}
+	.header_opener{
+		background-color: var(--white);
 	}
 
 	#theme_switch svg:first-child{
