--- a/portfolio/static/css.css
+++ b/portfolio/static/css.css
@@ -112,6 +112,8 @@ img{
 	--blue-deep: #0a0a33;
 
 	--bs-gutter-x: 1.5rem;
+
+	transition: background-color 10s ease-out, color 10s ease-out, display 3.8s ease-out, fill 3.8s ease-out !important;
 }
 
 body {
@@ -207,9 +209,20 @@ header{
 	line-height: 22px;
 	font-weight: 700;
 	margin-bottom: 80px;
+
+	display: flex;
+	align-items: center;
 }
 .nav_page>span:first-of-type{
 	color: var(--blue);
+}
+#theme_switch{
+	background: none;
+	border: none;
+	margin-left: auto;
+}
+#theme_switch svg:last-child{
+	display: none;
 }
 .step{
 	padding: 0 12px;
@@ -333,6 +346,8 @@ h1>span:hover {
 	max-width: 270px;
 }
 .services_grid_item img{
+	max-height: 170px;
+	object-fit: cover;
 	width: 100%;
 	width: -moz-available;  
 	width: -webkit-fill-available;
@@ -363,6 +378,7 @@ h1>span:hover {
 	max-width: 900px;	
 	width: 900px;
 	height: 336px;
+	object-fit: cover;
 }
 .section_content_image_mobile{
 	display: none;
@@ -396,6 +412,8 @@ h1>span:hover {
 }
 .about_signature{
 	margin-top: -20px;
+	text-align: end;
+	padding-right: 50px;
 }
 .about_signature img{
 	max-width: 260px;
@@ -735,6 +753,9 @@ form input[type=submit] {
 		height: 100%;
 		transition: .25s ease-in;
 	}
+	#theme_switch{
+		margin-left: 80px;
+	}
 
 	main{
 		max-width: 90vw;
@@ -815,6 +836,9 @@ form input[type=submit] {
 		max-width: 1000px;
 		width: 100%;
 	}
+	.services_grid_item img{
+		max-height: 250px;
+	}
 	.section_content_slide{
 		display: none;
 	}
@@ -827,6 +851,9 @@ form input[type=submit] {
 		float: none;
 		margin-left: 0;
 		transform: translateY(0);
+	}
+	.about_signature{
+		text-align: center;
 	}
 	.about_signature img {
 		max-width: 200px;
@@ -862,6 +889,12 @@ form input[type=submit] {
 	}
 	.skills_group li:hover .skills_text {
 		transform: translateX(0);
+	}
+	.skills_name{
+		letter-spacing: .5px;
+	}
+	.skill_fill{
+		max-width: 70px;
 	}
 }
 
@@ -976,3 +1009,88 @@ form input[type=submit] {
 	font-weight: 100;
 	font-style: italic;
 }
+
+/* ===================================
+	🌃. Dark Theme (added through js)
+====================================== */
+/*@media (prefers-color-scheme: dark) {
+	:root {
+		--white: #f9f9f9;
+		--black: #f5f5f5;
+		--blue: #3b3b91;
+
+		--blue-lightest: #3f3f75;
+		--blue-lighter: #252553;
+
+
+		--blue-darker: #1b1b4d;
+		--blue-darkest: #0d0d2a;
+		--accent: #ffb900;
+		--accent-muted: #e6ac00;
+		--blue-deep: #050517;
+
+		--bs-gutter-x: 1.5rem;
+	}
+	body {
+		color: var(--white);
+		background: linear-gradient(to right, var(--blue-darker) -15%, var(--blue-darkest) 12%, var(--blue-deep) 60%);
+	}
+	a {
+		color: var(--accent);
+	}
+	h1, h2, h3, h4, h5, h6 {
+		color: var(--white);
+	}
+	h1>span{
+		background-image: linear-gradient(var(--accent-muted), var(--accent-muted));
+	}
+
+	@media (max-width: 1199px){
+		header{
+			background: linear-gradient(
+				to right,
+				var(--blue-darker) -15%,
+				var(--blue-darkest) 12%,
+				var(--blue-deep) 60%
+			);
+		}
+	}
+	.header_opener{
+		background-color: var(--white);
+	}
+
+	#theme_switch svg:first-child{
+		display: none;
+	}
+	#theme_switch svg:last-child{
+		display: block;
+	}
+
+	.nav_page svg{
+		fill: var(--white) !important;
+	}
+	.nav_page>span:first-of-type{
+		color: var(--blue-light);
+	}
+	nav a, .nav_name a, .nav_social a{
+		color: var(--white);
+	}
+	a:hover {
+		color: var(--accent);
+	}
+	.active {
+		color: var(--accent);
+	}
+	nav a.active{
+		color: var(--blue-light) !important;
+	}
+	.services_cv{
+		background-color: var(--blue-lighter);
+	}
+	.skill_fill_progress{
+		background-color: var(--blue-light);
+	}
+	form input, form textarea{
+		color: var(--white) !important;
+	}
+}*/
