--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -276,6 +276,7 @@
 							{{ form.email }}
 							{{ form.subject }}
 							{{ form.content }}
+							{{ form.captcha }}
 							<!-- <input id="name" type="text" name="name" placeholder="NAME">
 							<input id="contact-email" type="email" name="email" placeholder="EMAIL">
 							<input id="subject" type="text" name="subject" placeholder="SUBJECT">
